languages/EmbeddedMontiArcDynamics/src/test/resources/test/embeddedmontiarcdynamic/cocos/invalid/newDynamicComponentAndPort/A.emad
/* (c) https://github.com/MontiCore/monticore */

package newDynamicComponentAndPort;

dynamic component A {

    ports
        dynamic in Q a[1],
        out B b;
}
